--- a/rb/spec/integration/selenium/webdriver/BUILD.bazel
+++ b/rb/spec/integration/selenium/webdriver/BUILD.bazel
@@ -38,18 +38,12 @@ rb_library(
     }),
 )
 
-rb_test(
-    name = "devtools",
-    srcs = ["devtools_spec.rb"],
-    args = ["rb/spec/integration/selenium/webdriver/devtools_spec.rb"],
-    env = ENV,
-    main = "@bundle//:bin/rspec",
-    tags = TAGS + ["exclusive"],  # DevTools is extremely flaky with port collisions
-    deps = [
-        ":spec_helper",
-        "@bundle",
-    ],
-)
+# DevTools tests are extremely flaky with port collisions
+# so they need extra "exclusive" tag
+DEVTOOLS_SPECS = [
+    "devtools_spec.rb",
+    "virtual_authenticator_spec.rb",
+]
 
 [
     rb_test(
@@ -66,6 +60,22 @@ rb_test(
     )
     for file in glob(
         ["*_spec.rb"],
-        exclude = ["devtools_spec.rb"],
+        exclude = DEVTOOLS_SPECS,
     )
+]
+
+[
+    rb_test(
+        name = file[:-8],
+        srcs = [file],
+        args = ["rb/spec/integration/selenium/webdriver/" + file],
+        env = ENV,
+        main = "@bundle//:bin/rspec",
+        tags = TAGS + ["exclusive"],
+        deps = [
+            ":spec_helper",
+            "@bundle",
+        ],
+    )
+    for file in DEVTOOLS_SPECS
 ]
