[run ruby] Disable test parallelism as it's too unstable

--- a/.github/workflows/ci-ruby.yml
+++ b/.github/workflows/ci-ruby.yml
@@ -117,7 +117,8 @@ jobs:
             --define browser=${{ matrix.browser }}
             --define remote=${{ matrix.remote }}
             --flaky_test_attempts 3
-            rb/spec/integration/...
+            --local_test_jobs 1
+            //rb/spec/integration/...
         env:
           DISPLAY: :99
 
