--- a/.github/workflows/ci-ruby.yml
+++ b/.github/workflows/ci-ruby.yml
@@ -59,17 +59,19 @@ jobs:
     steps:
       - name: Checkout source tree
         uses: actions/checkout@v3
+      - name: Setup Bazel
+        uses: ./.github/actions/setup-bazel
+        with:
+          bazelisk-cache: true
+          external-cache: |
+            npm: package-lock.json
+            rules_ruby_dist: rb/ruby_version.bzl
+          repository-cache: true
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           java-version: 11
           distribution: 'adopt'
-      # - name: Cache Bazel artifacts
-      #   uses: ./.github/actions/cache-bazel
-      #   with:
-      #     workflow: ruby
-      #     key: ${{ matrix.target }}
-      #     gcs-key: ${{ secrets.GOOGLE_CLOUD_STORAGE_KEY }}
       - name: Setup Fluxbox
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get -y install fluxbox
@@ -86,12 +88,8 @@ jobs:
       - name: Set resolution
         if: matrix.os == 'windows-latest'
         run: Set-DisplayResolution -Width 1920 -Height 1080 -Force
-      - uses: mxschmitt/action-tmate@v3
       - name: Run Chrome tests
-        uses: ./.github/actions/bazel
-        with:
-          command: test --cache_test_results=no --test_output=all //rb:${{ matrix.target }}
-          attempts: 3
+        run: bazel test --cache_test_results=no --test_output=all //rb:${{ matrix.target }}
         env:
           DISPLAY: :99
 
