--- a/.github/workflows/ci-ruby.yml
+++ b/.github/workflows/ci-ruby.yml
@@ -88,6 +88,7 @@ jobs:
       - name: Set resolution
         if: matrix.os == 'windows-latest'
         run: Set-DisplayResolution -Width 1920 -Height 1080 -Force
+      - uses: mxschmitt/action-tmate@v3
       - name: Run Chrome tests
         run: bazel test --cache_test_results=no --test_output=all //rb:${{ matrix.target }}
         env:
