--- a/.github/workflows/ci-ruby.yml
+++ b/.github/workflows/ci-ruby.yml
@@ -55,7 +55,7 @@ jobs:
       fail-fast: false
       matrix:
         target: [ 'remote-chrome-test' ]
-        os: [ 'ubuntu-latest'  ]
+        os: [ 'ubuntu-latest', 'windows-latest'  ]
     steps:
       - name: Checkout source tree
         uses: actions/checkout@v3
