--- a/.github/actions/setup-bazel/package.json
+++ b/.github/actions/setup-bazel/package.json
@@ -7,7 +7,10 @@
     "build": "ncc build index.js -o dist/main && ncc build post.js -o dist/post",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Alex Rodionov <p0deje@gmail.com>",
+  "author": {
+    "name": "Alex Rodionov",
+    "email": "p0deje@gmail.com"
+  },
   "license": "MIT",
   "dependencies": {
     "@actions/cache": "^3.1.0-beta.3",
