--- a/.github/workflows/ci-ruby.yml
+++ b/.github/workflows/ci-ruby.yml
@@ -66,7 +66,7 @@ jobs:
           bazelrc: |
             build:
               google_credentials: ${{ secrets.GOOGLE_CLOUD_STORAGE_KEY }}
-              remote_upload_local_results: ${{ github.ref == 'refs/heads/setup-bazel' }}
+              remote_upload_local_results: ${{ github.ref == 'refs/heads/trunk' }}
           external-cache: |
             crates: rust/Cargo.Bazel.lock
             go_sdk: WORKSPACE
