--- a/.github/actions/setup-bazel/action.yml
+++ b/.github/actions/setup-bazel/action.yml
@@ -6,21 +6,21 @@ inputs:
     required: false
     default: false
   bazelrc:
-    description: Extra configuration to set in user .bazelrc
+    description: Extra contents to write to user .bazelrc
     required: false
     default: ""
-  external-cache:
-    description: Cache external repositories configuration
+  google-credentials:
+    description: Google Cloud account key for remote cache
     required: false
     default: ""
   cache-version:
     description: Version of all caches
     required: false
     default: 1
-  repository-cache-key:
-    description: Cache repositories based on WORKSPACE
+  external-cache:
+    description: Cache external repositories configuration
     required: false
-    default: false
+    default: ""
   repository-cache:
     description: Cache repositories based on WORKSPACE
     required: false
