Add remote cache back

--- a/.github/workflows/ci-ruby.yml
+++ b/.github/workflows/ci-ruby.yml
@@ -64,6 +64,7 @@ jobs:
         with:
           bazelisk-cache: true
           bazelrc: |
+            build --remote_cache=https://storage.googleapis.com/seleniumhq-bazel-remote-cache
             build --remote_upload_local_results=${{ github.ref == 'refs/heads/setup-bazel' }}
           external-cache: |
             crates: rust/Cargo.Bazel.lock
