--- a/.github/actions/setup-bazel/package.json
+++ b/.github/actions/setup-bazel/package.json
@@ -14,6 +14,7 @@
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
     "@actions/glob": "^0.3.0",
+    "@actions/io": "^1.1.2",
     "@vercel/ncc": "^0.36.0"
   }
 }
