Get globbed extern caches

--- a/.github/workflows/ci-ruby.yml
+++ b/.github/workflows/ci-ruby.yml
@@ -41,9 +41,9 @@ jobs:
             crates: rust/Cargo.Bazel.lock
             go_sdk: WORKSPACE
             npm: package-lock.json
-            # python_3_*: WORKSPACE
+            python_3_*: WORKSPACE
             rules_ruby_dist: rb/ruby_version.bzl
-            # rust_*_tools: WORKSPACE
+            rust_*_tools: WORKSPACE
           repository-cache: true
       - name: Setup Java
         uses: actions/setup-java@v3
