--- a/.github/workflows/ci-ruby.yml
+++ b/.github/workflows/ci-ruby.yml
@@ -40,9 +40,14 @@ jobs:
           external-cache: |
             crates: rust/Cargo.Bazel.lock
             go_sdk: WORKSPACE
+            nodejs_*: WORKSPACE
             npm: package-lock.json
+            pypi__pip: py/requirements_lock.txt
             python_3_*: WORKSPACE
+            remote_java_tools: WORKSPACE
+            remotejdk11_*: WORKSPACE
             rules_ruby_dist: rb/ruby_version.bzl
+            rules_rust: WORKSPACE
             rust_*_tools: WORKSPACE
           repository-cache: true
       - name: Setup Java
