--- a/.github/workflows/ci-ruby.yml
+++ b/.github/workflows/ci-ruby.yml
@@ -55,22 +55,22 @@ jobs:
         with:
           java-version: 11
           distribution: 'temurin'
-      # - name: Setup Fluxbox
-      #   if: matrix.os == 'ubuntu-latest'
-      #   run: sudo apt-get -y install fluxbox
-      # - name: Setup Chrome
-      #   uses: browser-actions/setup-chrome@latest
-      #   with:
-      #     chrome-version: stable
-      # - name: Start XVFB
-      #   if: matrix.os == 'ubuntu-latest'
-      #   run: Xvfb :99 &
-      # - name: Start Fluxbox
-      #   if: matrix.os == 'ubuntu-latest'
-      #   run: fluxbox -display :99 &
-      # - name: Set resolution
-      #   if: matrix.os == 'windows-latest'
-      #   run: Set-DisplayResolution -Width 1920 -Height 1080 -Force
+      - name: Setup Fluxbox
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get -y install fluxbox
+      - name: Setup Chrome
+        uses: browser-actions/setup-chrome@latest
+        with:
+          chrome-version: stable
+      - name: Start XVFB
+        if: matrix.os == 'ubuntu-latest'
+        run: Xvfb :99 &
+      - name: Start Fluxbox
+        if: matrix.os == 'ubuntu-latest'
+        run: fluxbox -display :99 &
+      - name: Set resolution
+        if: matrix.os == 'windows-latest'
+        run: Set-DisplayResolution -Width 1920 -Height 1080 -Force
       # - uses: mxschmitt/action-tmate@v3
       - name: Run Chrome tests
         run: bazel test --cache_test_results=no --test_output=all //rb:${{ matrix.target }}
